--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "version": "1.0",
 
     "description": "Hides or shows the Youtube video controls when paused.",
-
+    "homepage_url": "https://github.com/Stevox404/youtube-zen",
     "icons": {
         "48": "icons/zen-min-48.png",
         "96": "icons/zen-min-96.png"
